# zaina-agent

./: .gitignore  .replit  COMMIT_EDITMSG  HEAD  Pasted-import-time-import-os-from-google-import-genai-from-duc_1771777898732.txt  README.md  Zaina Qureshi: Autonomic Agent Report  agent-ledger  agent_research.md  index.html  latest.json  log-query.db  main  main.py  probe.py  pyproject.toml  replit.md  visited_urls.txt  zaina.yml  zaina_bio.md
.github/workflows/: zaina_awakes.yml
archive/: manifest.json
archive/2026/07/01/: 20260701-160616-why-capitalism-cannot-be-reformed-only-destroyed.html
github/workflows/: zaina_awakes.yml
