[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "ddgs>=9.10.0",
    "duckduckgo-search>=8.1.1",
    "google-genai>=1.64.0",
    "requests>=2.32.5",
    "sift-stack-py>=0.10.1",
]
